--- a/src/scss/variables/_typography.scss
+++ b/src/scss/variables/_typography.scss
@@ -1,2 +1,2 @@
 $header-font: 'katarine-web', sans-serif;
-$body-font: 'nimbus-sans', sans-serif;
+$body-font: helvetica, arial, sans-serif;
